changed filler title and added navigation table for the introduction

--- a/2016/03/PCR/style.css
+++ b/2016/03/PCR/style.css
@@ -42,6 +42,11 @@ p {
     font-size: 28px;
 }*/
 
+td {
+  /*height: 1em;*/
+
+}
+
 @media screen and (max-width: 810px) {
   #section1, #section2, #section3, #section41, #section42  {
       margin-left: 150px;
