finished navigation thumbnails (still need to add images)

--- a/2016/03/PCR/style.css
+++ b/2016/03/PCR/style.css
@@ -42,10 +42,6 @@ p {
     font-size: 28px;
 }*/
 
-td {
-  /*height: 1em;*/
-
-}
 
 @media screen and (max-width: 810px) {
   #section1, #section2, #section3, #section41, #section42  {
@@ -53,6 +49,22 @@ td {
   }
 }
 
+/* Section Thumbnails Styles */
+td {
+  font-size: 120%;
+  font-style: bold;
+}
+.tn {
+  height: 10em;
+  width: 10em;
+  background-color: grey;
+
+}
+
+.table {
+  width: 75%;
+  margin-left: 15%;
+}
 
 /* HEADER STYLES */
 nav {
