--- a/2016/03/dining-guide-sp16/stylesheet.css
+++ b/2016/03/dining-guide-sp16/stylesheet.css
@@ -27,7 +27,6 @@ a:hover { color:#1b5664; }
   height: 97.5%;
   top:0;left:0;
   overflow:hidden;
-  border-right:1px solid rgba(0,0,0,0.25);
 }
 .pad2 {
   padding:20px;
@@ -50,7 +49,6 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 .heading {
   background:#FFFFFF;
-  border-bottom:1px solid #ededed;
   height:60px;
   line-height:60px;
   padding:0 10px;
@@ -143,7 +141,6 @@ h1, h2, h3, h4, h5, h6, .title {
 
 .sidebar {
   margin: 15px;
-background: white;
 width: 450px;
 border: 1px solid #e2e2e2;
   position: absolute;
@@ -158,6 +155,16 @@ border: 1px solid #e2e2e2;
   width: 100%;
 }
 
+.listings {
+      height: 50%;
+      background: #fff;
+}
+
+#google_image_div {
+  bottom: 30px;
+left: 70px;
+}
+
 @media only screen and (max-width: 750px) {
   #listings {
     display: none;
@@ -170,5 +177,14 @@ border: 1px solid #e2e2e2;
   }
   h1 {
     margin-top: -10px;
+  }
+  #google_image_div {
+    display: none;
+  }
+}
+
+@media only screen and (max-height: 750px) {
+  #google_image_div {
+    display: none;
   }
 }
