--- a/2016/03/PCR/style.css
+++ b/2016/03/PCR/style.css
@@ -11,11 +11,27 @@ h1 {
   font-size: 72px;
 }
 
+h1.title {
+}
+
+section:nth-child(4n+1) h1 {
+  text-shadow: 4px 4px #2ac1dd;
+}
+section:nth-child(4n+2) h1 {
+  text-shadow: 4px 4px #da1924;
+}
+section:nth-child(4n+3) h1 {
+  text-shadow: 4px 4px #98A62F;
+}
+section:nth-child(4n+4) h1 {
+  text-shadow: 4px 4px #F49F00;
+}
+
 ul.side-nav {
   font-family: "neuzeit-grotesk", "montserrant", sans-serif;
   font-size: 17px;
   font-weight: 100;
-  width: 250px;
+  width: 15%;
   top: 100px;
 }
 
