Styling, over time graphics

--- a/2016/03/PCR/style.css
+++ b/2016/03/PCR/style.css
@@ -14,20 +14,20 @@ h1 {
 h1.title {
 }
 
-/*
+
 section:nth-child(4n+1) h1 {
-  text-shadow: 4px 4px #2ac1dd;
+  color: #2ac1dd;
 }
 section:nth-child(4n+2) h1 {
-  text-shadow: 4px 4px #da1924;
+  color: #da1924;
 }
 section:nth-child(4n+3) h1 {
-  text-shadow: 4px 4px #98A62F;
+  color: #98A62F;
 }
 section:nth-child(4n+4) h1 {
-  text-shadow: 4px 4px #F49F00;
+  color: #F49F00;
 }
-*/
+
 
 ul.side-nav {
   font-family: "neuzeit-grotesk", "montserrant", sans-serif;
