--- a/2016/03/PCR/style.css
+++ b/2016/03/PCR/style.css
@@ -11,11 +11,29 @@ h1 {
   font-size: 72px;
 }
 
+h1.title {
+}
+
+
+section:nth-child(4n+1) h1 {
+  color: #2ac1dd;
+}
+section:nth-child(4n+2) h1 {
+  color: #da1924;
+}
+section:nth-child(4n+3) h1 {
+  color: #98A62F;
+}
+section:nth-child(4n+4) h1 {
+  color: #F49F00;
+}
+
+
 ul.side-nav {
   font-family: "neuzeit-grotesk", "montserrant", sans-serif;
   font-size: 17px;
   font-weight: 100;
-  width: 250px;
+  width: 15%;
   top: 100px;
 }
 
@@ -23,7 +41,7 @@ li.active {
   font-weight: 900;
 }
 
-#myScrollspy 
+#myScrollspy
 
 section {
   min-height: 100%;
@@ -216,4 +234,21 @@ body {
   margin: 0;
   padding-right: 0;
   padding-left: 0;
+}
+
+
+/*// CHART STYLES*/
+
+path {
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
 }
