--- a/2016/03/PCR/style.css
+++ b/2016/03/PCR/style.css
@@ -41,10 +41,21 @@ li.active {
   font-weight: 900;
 }
 
-#myScrollspy
+a {
+  color: #2ac1dd;
+}
+
+a:hover {
+  color: #2ac1dd;
+}
+
+#myScrollspy{}
 
 section {
-  min-height: 100%;
+  /*min-height: 100%;*/
+  padding-bottom: 75px;
+  padding-top: 50px;
+  border-bottom: 7px solid black;
 }
 
 p {
