--- a/2016/03/PCR/style.css
+++ b/2016/03/PCR/style.css
@@ -33,7 +33,7 @@ ul.side-nav {
   font-family: "neuzeit-grotesk", "montserrant", sans-serif;
   font-size: 17px;
   font-weight: 100;
-  width: 15%;
+  width: 100%;
   top: 100px;
 }
 
@@ -52,7 +52,6 @@ p {
 }
 
 .content {
-  border-left: 7px solid #000;
 }
 
 /*div.col-sm-9 div {
@@ -60,6 +59,9 @@ p {
     font-size: 28px;
 }*/
 
+.header-table {
+  padding: 25px;
+}
 
 @media screen and (max-width: 810px) {
   #section1, #section2, #section3, #section41, #section42  {
@@ -72,12 +74,7 @@ td {
   font-size: 120%;
   font-style: bold;
 }
-.tn {
-  height: 10em;
-  width: 10em;
-  background-color: grey;
 
-}
 
 .table {
   width: 75%;
@@ -212,6 +209,15 @@ body {
 }
 .section-dropdown h4 {
   font-weight: 700;
+}
+
+.side-nav:not(.affix) li {
+  border-right: solid 7px black;
+}
+
+ul.side-nav.nav.affix  {
+  width: 15%;
+  border-right: solid 7px black;
 }
 
 .affix:not(.side-nav) {
