--- a/2016/03/best-of-penn/examples.css
+++ b/2016/03/best-of-penn/examples.css
@@ -4,7 +4,7 @@
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
 form,fieldset,input,textarea,p,blockquote,th,td {
     padding: 0;
-    margin: 0;
+    margin-top: 30;
 }
 a{
 	text-decoration:none;
@@ -34,7 +34,7 @@ caption,th {
 h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
     font-size: 100%;
-    margin:0;
+    margin: 30;
     padding:0;
     color:#444;
 }
