--- a/2016/03/PCR/style.css
+++ b/2016/03/PCR/style.css
@@ -76,8 +76,16 @@ a:hover {
 section {
   /*min-height: 100%;*/
   padding-bottom: 75px;
+  padding-left: 65px;
+  padding-right: 65px;;
   /*padding-top: 25px;*/
   border-bottom: 1px solid #a2a2a2;
+}
+
+.links {
+      font-size: 20px;
+      font-weight: bold;
+      font-family: "neuzeit-grotesk", "montserrant", sans-serif;
 }
 
 p, ol li, p li, p ul {
@@ -298,12 +306,17 @@ ul.side-nav.nav.affix  {
   background: #2ac1dd;
 }
 
+.btn:hover, .btn:active, .dept-quality {
+      color: #98A62F;
+      border-color:  #98A62F;
+}
+
 .content {
       border-left: solid 7px black;
 }
 
 #sections {
-      border-top: solid 3px black;
+      border-top: solid 1px black;
 }
 /*// CHART STYLES*/
 
