Fix project name, subhead, header styling

--- a/2016/04/PCR/style.css
+++ b/2016/04/PCR/style.css
@@ -227,6 +227,10 @@ body {
   padding-right: 3%;
 }
 
+.header-table td {
+  line-height: 1.1 !important;
+}
+
 .section-dropdown {
   width: 100%;
   background-color: #f8f8f8;
