graph fixes, no more line breaks

--- a/2016/04/PCR/style.css
+++ b/2016/04/PCR/style.css
@@ -344,7 +344,9 @@ ul.side-nav.nav.affix, ul.side-nav.nav.affix-top {
   padding-top: 150px;
   left: 10px;
 }
-
+text {
+  font-family: "Neuzeit-Grotesk";
+}
 /*// CHART STYLES*/
 
 path {
