--- a/2016/04/PCR/style.css
+++ b/2016/04/PCR/style.css
@@ -83,6 +83,22 @@ section {
   border-bottom: 1px solid #a2a2a2;
 }
 
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .links {
   padding-top: 10px;
       font-size: 20px;
