--- a/2016/04/PCR/style.css
+++ b/2016/04/PCR/style.css
@@ -338,3 +338,12 @@ path {
     stroke-width: 1;
     shape-rendering: crispEdges;
 }
+
+.carousel-control.left, .carousel-control.right {
+    background-image: none
+}
+
+.glyphicon-chevron-left {
+      color: white;
+
+}
