--- a/2016/04/PCR/style.css
+++ b/2016/04/PCR/style.css
@@ -397,6 +397,8 @@ path {
 
 #dept-comp-chart {
   max-width: 100%;
+  /*margin-top: 300px;*/
+  margin: 100px 0px 0px 0px;
   overflow: hidden;
 }
 
