--- a/2016/04/PCR/style.css
+++ b/2016/04/PCR/style.css
@@ -219,7 +219,9 @@ body {
 .social-icons .fa {
   padding-left: 5px;
 }
-
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
 .navbar-subscribe {
   font-weight: 700;
   font-size: 14px;
