Update background imgs

--- a/2016/join/stylesheet.css
+++ b/2016/join/stylesheet.css
@@ -116,6 +116,14 @@ p{
 	background-image: url(https://s3.amazonaws.com/media.dpn/49324_dsc_5140f.jpg);
 }
 
+#section15-1 {
+  background-image: url(https://s3.amazonaws.com/media.dpn/52800_biz_analyticsf.png);
+}
+
+#section15-2 {
+  background-image: url(https://s3.amazonaws.com/media.dpn/52801_ed_analyticf.jpg);
+}
+
 #section16 {
 	background-image: url(https://s3.amazonaws.com/media.dpn/49326_street_copyo.jpg);
 }
