--- a/2016/11/voters-guide/css/style.css
+++ b/2016/11/voters-guide/css/style.css
@@ -127,6 +127,15 @@ nav h4 {
 
 .leaflet-find-poll {
   position: absolute !important;
+  left: 227px;
+  top: 10px;
+}
+
+#address {
+  max-width: 160px;
+  max-height: 27px;
+  position: absolute;
+  z-index: 10;
   left: 60px;
   top: 10px;
 }
