--- a/2016/11/basketball-preview/css/style.css
+++ b/2016/11/basketball-preview/css/style.css
@@ -141,3 +141,83 @@ nav h4 {
 }
 
 /*/ Header Styles*/
+
+/*FONTS*/
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_bold_italic.woff2') format('woff2'), url('../font/ministry_w00_bold_italic.woff') format('woff'), url('../font/ministry_w00_bold_italic.ttf') format('truetype');
+    font-weight: 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_bold.woff2') format('woff2'), url('../font/ministry_w00_bold.woff') format('woff'), url('../font/ministry_w00_bold.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_extra_bold.woff2') format('woff2'), url('../font/ministry_w00_extra_bold.woff') format('woff'), url('../font/ministry_w00_extra_bold.ttf') format('truetype');
+    font-weight: 1200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_extra_light.woff2') format('woff2'), url('../font/ministry_w00_extra_light.woff') format('woff'), url('../font/ministry_w00_extra_light.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_heavy.woff2') format('woff2'), url('../font/ministry_w00_heavy.woff') format('woff'), url('../font/ministry_w00_heavy.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_light_italic.woff2') format('woff2'), url('../font/ministry_w00_light_italic.woff') format('woff'), url('../font/ministry_w00_light_italic.ttf') format('truetype');
+    font-weight: 200;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_light.woff2') format('woff2'), url('../font/ministry_w00_light.woff') format('woff'), url('../font/ministry_w00_light.ttf') format('truetype');
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_medium.woff2') format('woff2'), url('../font/ministry_w00_medium.woff') format('woff'), url('../font/ministry_w00_medium.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_thin_italic.woff2') format('woff2'), url('../font/ministry_w00_thin_italic.woff') format('woff'), url('../font/ministry_w00_thin_italic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'ministry';
+    src: url('../font/ministry_w00_thin.woff2') format('woff2'), url('../font/ministry_w00_thin.woff') format('woff'), url('../font/ministry_w00_thin.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+/*END FONTS*/
+
+body {
+  font-family: "ministry";
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 900;
+}
