--- a/2016/11/basketball-preview/css/offense.css
+++ b/2016/11/basketball-preview/css/offense.css
@@ -36,6 +36,8 @@ big {
   margin-top: -45px;
   top: -35px;
   position: relative;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 .player-number {
