--- a/2016/11/coffee-on-campus/css/style.css
+++ b/2016/11/coffee-on-campus/css/style.css
@@ -184,10 +184,6 @@ h4 {
   background-color: #633213;
 }
 
-.light {
-  background-color: #bc7937;
-}
-
 .logo {
   width: 80px;
 }
@@ -212,6 +208,10 @@ h4 {
   margin-left: 5px;
   margin-right: 5px;
   height: 400px;
+}
+
+.vendor:active {
+  background-color: #bc7937;
 }
 
 #hubbub {
