--- a/2016/11/coffee-on-campus/css/style.css
+++ b/2016/11/coffee-on-campus/css/style.css
@@ -188,6 +188,10 @@ h4 {
   width: 80px;
 }
 
+.tooltip-title {
+  color: #8e4521;
+}
+
 #sponsor {
   color: white;
   margin-left: 50px;
@@ -210,7 +214,7 @@ h4 {
   height: 400px;
 }
 
-.vendor:active {
+.vendor.active {
   background-color: #bc7937;
 }
 
